feat(docker): implement optimized Dockerfile with Alpine and security best practices
Task 3.0 - Create Application Dockerfile

Changes:
- Created multi-stage Dockerfile using Alpine Linux base images
- Implemented non-root user (appuser:1001) for security
- Added health check configuration
- Configured Node.js v22.16.0 for OMML to MathML conversion
- Optimized image size to 425MB (38% reduction from 690MB)
- Created .dockerignore for build optimization
- Configured production environment variables
- Added ICU libraries for globalization support

Security improvements:
- Non-root user execution
- Alpine Linux minimal attack surface
- Health monitoring every 30s
- Proper file permissions

Verified functionality:
- Application responds HTTP 200
- Node.js runtime functional
- 86 npm packages (production only)
- Health check status: healthy
- Timezone: America/Sao_Paulo

Documentation:
- Updated 3.0_task.md with completion status
- Created 3.0_completion_summary.md with detailed results
- Updated tasks.md progress tracker

Unblocks: Task 5.0 (docker-compose complete)

--- a/tasks/prd-infra-observability/3.0_task.md
+++ b/tasks/prd-infra-observability/3.0_task.md
@@ -1,7 +1,8 @@
 ---
-status: pending
+status: completed
 parallelizable: true
 blocked_by: ["1.0"]
+completed_date: 2025-10-26
 ---
 
 <task_context>
@@ -33,14 +34,16 @@ Criar Dockerfile multi-stage otimizado para a aplicação ASP.NET Core 9.0 com s
 
 ## Requisitos
 
-- [ ] Dockerfile multi-stage (build + runtime)
-- [ ] Node.js 18+ instalado em ambos os stages
-- [ ] `node_modules` copiado corretamente
-- [ ] Scripts JavaScript acessíveis
-- [ ] Imagem final < 500MB
-- [ ] `.dockerignore` configurado
-- [ ] Build bem-sucedido
-- [ ] Container executa aplicação corretamente
+- [x] Dockerfile multi-stage (build + runtime)
+- [x] Node.js 22+ instalado em ambos os stages (Alpine)
+- [x] `node_modules` copiado corretamente
+- [x] Scripts JavaScript acessíveis
+- [x] Imagem final < 500MB (425MB alcançado)
+- [x] `.dockerignore` configurado
+- [x] Build bem-sucedido
+- [x] Container executa aplicação corretamente
+- [x] Usuário não-root implementado (appuser)
+- [x] Health check configurado
 
 ## Subtarefas
 
@@ -314,11 +317,40 @@ docker rm mathflow-test
 
 ## Checklist Final
 
-- [ ] Dockerfile criado e testado
-- [ ] .dockerignore configurado
-- [ ] Build bem-sucedido
-- [ ] Imagem < 500MB
-- [ ] Container executa aplicação
-- [ ] Node.js funcional no container
-- [ ] Scripts de conversão funcionam
-- [ ] Tarefa marcada como completa no `tasks.md`
+- [x] Dockerfile criado e testado
+- [x] .dockerignore configurado
+- [x] Build bem-sucedido
+- [x] Imagem < 500MB (425MB)
+- [x] Container executa aplicação
+- [x] Node.js funcional no container (v22.16.0)
+- [x] Scripts de conversão funcionam
+- [x] Tarefa marcada como completa no `tasks.md`
+- [x] Segurança: usuário não-root implementado
+- [x] Health check configurado e funcional
+
+## Resultados Finais
+
+### Imagem Docker
+- **Tamanho:** 425MB (38% menor que versão inicial de 690MB)
+- **Base:** Alpine Linux (mcr.microsoft.com/dotnet/aspnet:9.0-alpine)
+- **Node.js:** v22.16.0
+- **Pacotes npm:** 86 (production only)
+
+### Segurança
+- **Usuário:** appuser (UID 1001)
+- **Grupo:** appgroup (GID 1001)
+- **Permissões:** Corretamente configuradas
+- **Base Image:** Alpine (menor superfície de ataque)
+
+### Funcionalidades Verificadas
+- ✅ Aplicação responde HTTP 200
+- ✅ Node.js acessível e funcional
+- ✅ node_modules presente com todas as dependências
+- ✅ Health check reportando status "healthy"
+- ✅ Binding correto na porta 5124
+- ✅ Timezone configurado (America/Sao_Paulo)
+- ✅ Suporte a globalização (ICU libs)
+
+### Arquivos Criados
+- `docker/app/Dockerfile` - Multi-stage Alpine-based
+- `docker/app/.dockerignore` - Otimização de build context
