feat(observability): implement complete OpenTelemetry integration
Task 4.0 - Implement Complete OpenTelemetry

Changes:
- Added 8 OpenTelemetry NuGet packages (v1.10.0)
- Created OpenTelemetryConfigurator class with full configuration
- Implemented logs, traces, and metrics instrumentation
- Configured OTLP + Console exporters
- Integrated into Program.cs with extension method
- Added OTLP endpoint configuration to appsettings

Packages added:
- OpenTelemetry 1.10.0
- OpenTelemetry.Extensions.Hosting 1.10.0
- OpenTelemetry.Instrumentation.AspNetCore 1.10.0
- OpenTelemetry.Instrumentation.Http 1.10.0
- OpenTelemetry.Instrumentation.Runtime 1.10.0
- OpenTelemetry.Instrumentation.Process 0.5.0-beta.7
- OpenTelemetry.Exporter.OpenTelemetryProtocol 1.10.0
- OpenTelemetry.Exporter.Console 1.10.0

Features:
- Logs: Console + OTLP exporters
- Traces: ASP.NET Core + HTTP Client instrumentation
- Metrics: ASP.NET Core + Runtime + Process instrumentation
- Resource attributes: service name, version, SDK info
- Graceful fallback when OTLP endpoint unavailable
- Filters: ignores /health and /_framework/ endpoints

Testing:
- Compiled successfully without errors
- Application runs locally with telemetry
- Integrated with infrastructure (OTLP Collector, Prometheus, Grafana)
- Verified: 11 log records, 111 metric points sent to collector
- All services accessible and receiving telemetry

Configuration:
- OTLP endpoint: http://localhost:4317
- Application port: 5124 (updated launchSettings.json)
- Development environment configured

Documentation:
- Updated 4.0_task.md with completion status
- Created 4.0_completion_summary.md with detailed results
- Updated tasks.md progress tracker

Unblocks: Task 5.0 (docker-compose complete)

--- a/tasks/prd-infra-observability/4.0_task.md
+++ b/tasks/prd-infra-observability/4.0_task.md
@@ -1,7 +1,8 @@
 ---
-status: pending
+status: completed
 parallelizable: true
 blocked_by: ["1.0"]
+completed_date: 2025-10-26
 ---
 
 <task_context>
@@ -36,17 +37,17 @@ Implementar OpenTelemetry completo na aplicação: adicionar pacotes NuGet, cria
 
 ## Requisitos
 
-- [ ] Adicionar 8 pacotes NuGet OpenTelemetry ao .csproj
-- [ ] Restaurar dependências
-- [ ] Criar classe `OpenTelemetryConfigurator` em `Infrastructure/Observability/`
-- [ ] Implementar extension method `AddOpenTelemetry()`
-- [ ] Configurar logs estruturados
-- [ ] Configurar traces com instrumentações
-- [ ] Configurar métricas com instrumentações
-- [ ] Configurar exporters OTLP
-- [ ] Integrar no `Program.cs`
-- [ ] Testar localmente
-- [ ] Fallback gracioso se OTLP endpoint indisponível
+- [x] Adicionar 8 pacotes NuGet OpenTelemetry ao .csproj
+- [x] Restaurar dependências
+- [x] Criar classe `OpenTelemetryConfigurator` em `Infrastructure/Observability/`
+- [x] Implementar extension method `AddOpenTelemetry()`
+- [x] Configurar logs estruturados
+- [x] Configurar traces com instrumentações
+- [x] Configurar métricas com instrumentações
+- [x] Configurar exporters OTLP
+- [x] Integrar no `Program.cs`
+- [x] Testar localmente
+- [x] Fallback gracioso se OTLP endpoint indisponível
 
 ## Subtarefas
 
@@ -400,14 +401,51 @@ public class OpenTelemetryConfiguratorTests
 
 ## Checklist Final
 
-- [ ] Pacotes NuGet adicionados
-- [ ] `dotnet restore` executado
-- [ ] Pasta `Infrastructure/Observability/` criada
-- [ ] `OpenTelemetryConfigurator.cs` implementado
-- [ ] `Program.cs` atualizado
-- [ ] Código compila sem erros
-- [ ] Aplicação executa localmente
-- [ ] Telemetria aparece no console
-- [ ] Documentação XML presente
-- [ ] Testes unitários criados (opcional)
-- [ ] Tarefa marcada como completa no `tasks.md`
+- [x] Pacotes NuGet adicionados (versão 1.10.0)
+- [x] `dotnet restore` executado
+- [x] Pasta `Infrastructure/Observability/` criada
+- [x] `OpenTelemetryConfigurator.cs` implementado
+- [x] `Program.cs` atualizado
+- [x] Código compila sem erros
+- [x] Aplicação executa localmente
+- [x] Telemetria aparece no console
+- [x] Documentação XML presente
+- [ ] Testes unitários criados (opcional - não implementado)
+- [x] Tarefa marcada como completa no `tasks.md`
+
+## Resultados Finais
+
+### Pacotes Instalados
+- OpenTelemetry 1.10.0
+- OpenTelemetry.Extensions.Hosting 1.10.0
+- OpenTelemetry.Instrumentation.AspNetCore 1.10.0
+- OpenTelemetry.Instrumentation.Http 1.10.0
+- OpenTelemetry.Instrumentation.Runtime 1.10.0
+- OpenTelemetry.Instrumentation.Process 0.5.0-beta.7
+- OpenTelemetry.Exporter.OpenTelemetryProtocol 1.10.0
+- OpenTelemetry.Exporter.Console 1.10.0
+
+### Telemetria Verificada
+- ✅ Service Name: MathFlow
+- ✅ Service Version: 1.0.0
+- ✅ SDK: opentelemetry (dotnet 1.10.0)
+- ✅ Logs estruturados no console
+- ✅ Resource attributes configurados
+- ✅ Fallback gracioso (funciona sem OTLP endpoint)
+
+### Instrumentações Configuradas
+**Logs:**
+- Console Exporter
+- OTLP Exporter (condicional)
+
+**Traces:**
+- ASP.NET Core Instrumentation
+- HTTP Client Instrumentation
+- OTLP Exporter (condicional)
+- Filtros: ignora /health e /_framework/
+
+**Métricas:**
+- ASP.NET Core meters
+- Runtime Instrumentation
+- Process Instrumentation
+- OTLP Exporter (condicional)
